Group wheel in the wheelhouse by the version
The name of the directory is the version of the wheels it
contains.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,15 @@ python: 3.5
 sudo: required
 dist: trusty
 services: docker
+
 git:
   depth: 3
+
+notifications:
+   email:
+      on_success: change
+      on_failure: change
+
 
 matrix:
   exclude:
