--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 env:
     global:
         - REPO_DIR=scikit-misc
-        - BUILD_COMMIT=master
+        - BUILD_COMMIT=v0.1.0alpha3
         - PLAT=x86_64
         - NP_BUILD_DEP="numpy==1.7.1"
         - NP_TEST_DEP="numpy==1.7.1"
@@ -34,49 +34,41 @@ matrix:
     - os: linux
       env:
         - MB_PYTHON_VERSION=2.7
-    # - os: linux
-    #   env:
-    #     - MB_PYTHON_VERSION=2.7
-    #     - UNICODE_WIDTH=16
-    # - os: linux
-    #   env:
-    #     - MB_PYTHON_VERSION=2.7
-    #     - PLAT=i686
-    # - os: linux
-    #   env:
-    #     - MB_PYTHON_VERSION=2.7
-    #     - PLAT=i686
-    #     - UNICODE_WIDTH=16
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - UNICODE_WIDTH=16
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - PLAT=i686
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - PLAT=i686
+        - UNICODE_WIDTH=16
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.5
         - NP_BUILD_DEP=numpy==1.9.3
         - NP_TEST_DEP=numpy==1.9.3
-    # - os: linux
-    #   python: 3.5
-    #   env:
-    #     - MB_PYTHON_VERSION=3.5
-    #     - PLAT=i686
-    #     - NP_BUILD_DEP=numpy==1.9.3
-    #     - NP_TEST_DEP=numpy==1.9.3
-    # - os: osx
-    #   language: objective-c
-    #   env:
-    #     - MB_PYTHON_VERSION=2.7
-    # - os: osx
-    #   language: objective-c
-    #   env:
-    #     - MB_PYTHON_VERSION=3.4
-    #     - NP_TEST_DEP=numpy==1.9.3
-    # - os: osx
-    #   language: objective-c
-    #   env:
-    #     - MB_PYTHON_VERSION=3.5
-    #     # OSX build of scipy on Python 3.5 needs built 1.8.2 wheel to avoid
-    #     # https://github.com/numpy/numpy/issues/6204.  numpy 1.8.2 wheel for
-    #     # Python 3.5 at nipy manylinux URL.
-    #     - NP_BUILD_DEP=numpy==1.8.2
-    #     - NP_TEST_DEP=numpy==1.9.3
+    - os: linux
+      python: 3.5
+      env:
+        - MB_PYTHON_VERSION=3.5
+        - PLAT=i686
+        - NP_BUILD_DEP=numpy==1.9.3
+        - NP_TEST_DEP=numpy==1.9.3
+    - os: osx
+      language: generic
+      env:
+        - MB_PYTHON_VERSION=2.7
+    - os: osx
+      language: generic
+      env:
+        - MB_PYTHON_VERSION=3.5
+        - NP_BUILD_DEP=numpy==1.9.3
+        - NP_TEST_DEP=numpy==1.9.3
 
 before_install:
     - BUILD_DEPENDS="$NP_BUILD_DEP Cython"
