Use patched version for multibuild
Patched to get around the versioneer incompatibility with
packages residing in submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "multibuild"]
 	path = multibuild
-	url = https://github.com/matthew-brett/multibuild.git
+	# url = https://github.com/matthew-brett/multibuild.git
+	url = https://github.com/has2k1/multibuild.git
+        branch = fix-pip-wheel-versioneer
 [submodule "scikit-misc"]
 	path = scikit-misc
 	url = https://github.com/has2k1/scikit-misc.git
