--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 env:
     global:
         - REPO_DIR=scikit-misc
-        - BUILD_COMMIT=v0.1.0alpha3
+        - BUILD_COMMIT=v0.1.0
         - PLAT=x86_64
         - NP_BUILD_DEP="numpy==1.7.1"
         - NP_TEST_DEP="numpy==1.7.1"
