--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ env:
         - REPO_DIR=scikit-misc
         - BUILD_COMMIT=v0.1.3
         - PLAT=x86_64
-        - NP_BUILD_DEP="numpy==1.13.3"
-        - NP_TEST_DEP="numpy==1.13.3"
-        - CYTHON_BUILD_DEP="Cython==0.29.14"
+        - NP_BUILD_DEP="numpy==1.16.5"
+        - NP_TEST_DEP="numpy==1.16.5"
+        - CYTHON_BUILD_DEP="Cython==0.29.18"
         - PYBIND11_BUILD_DEP="pybind11==2.4.3"
         - UNICODE_WIDTH=32
         - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
@@ -17,8 +17,8 @@ os: linux
 language: python
 # The travis Python version is unrelated to the version we build and test
 # with.  This is set with the MB_PYTHON_VERSION variable.
-python: 3.5
-dist: trusty
+python: 3.8
+dist: bionic
 services: docker
 
 git:
@@ -31,7 +31,7 @@ notifications:
 
 jobs:
   include:
-    # linux, Python 3.6, 3.7, 3.8
+    # linux, Python 3.6, 3.7, 3.8, 3.9
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.6
@@ -46,31 +46,44 @@ jobs:
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.7
-        - NP_BUILD_DEP=numpy==1.14.5
-        - NP_TEST_DEP=numpy==1.14.5
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
         - CYTHON_BUILD_DEP="Cython"
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.7
         - PLAT=i686
-        - NP_BUILD_DEP=numpy==1.14.5
-        - NP_TEST_DEP=numpy==1.14.5
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
         - CYTHON_BUILD_DEP="Cython"
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.8
-        - NP_BUILD_DEP=numpy==1.17.3
-        - NP_TEST_DEP=numpy==1.17.3
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
         - CYTHON_BUILD_DEP="Cython"
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.8
         - PLAT=i686
-        - NP_BUILD_DEP=numpy==1.17.3
-        - NP_TEST_DEP=numpy==1.17.3
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
+        - CYTHON_BUILD_DEP="Cython"
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.9
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
+        - CYTHON_BUILD_DEP="Cython"
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.9
+        - PLAT=i686
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
         - CYTHON_BUILD_DEP="Cython"
 
-    # OSX, Python 3.6, 3.7, 3.8
+    # OSX, Python 3.6, 3.7, 3.8, 3.9
     - os: osx
       language: generic
       env:
@@ -81,16 +94,25 @@ jobs:
       language: generic
       env:
         - MB_PYTHON_VERSION=3.7
-        - NP_BUILD_DEP=numpy==1.14.5
-        - NP_TEST_DEP=numpy==1.14.5
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
         - CYTHON_BUILD_DEP="Cython"
     - os: osx
       language: generic
       osx_image: xcode10.1
       env:
         - MB_PYTHON_VERSION=3.8
-        - NP_BUILD_DEP=numpy==1.17.3
-        - NP_TEST_DEP=numpy==1.17.3
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
+        - CYTHON_BUILD_DEP="Cython"
+        - MB_PYTHON_OSX_VER=10.9
+    - os: osx
+      language: generic
+      osx_image: xcode10.1
+      env:
+        - MB_PYTHON_VERSION=3.9
+        - NP_BUILD_DEP=numpy==1.19.1
+        - NP_TEST_DEP=numpy==1.19.1
         - CYTHON_BUILD_DEP="Cython"
         - MB_PYTHON_OSX_VER=10.9
 
