--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,8 +12,8 @@ on:
 env:
   REPO_DIR: scikit-misc
   BUILD_COMMIT: v0.1.4
-  CYTHON_BUILD_DEP: "Cython==0.29.18"
-  PYBIND11_BUILD_DEP: "pybind11==2.4.3"
+  CYTHON_BUILD_DEP: "Cython==0.29.24"
+  PYBIND11_BUILD_DEP: "pybind11>=2.4.3"
   UNICODE_WIDTH: 32
   BUILD_DIR: ${{ github.workspace }}
   OTHER_TEST_DEPS: "pytest"
@@ -30,26 +30,32 @@ jobs:
       # Ensure that a wheel builder finishes even if another fails
       fail-fast: false
       matrix:
-        os: ["ubuntu-16.04", macos-latest]
+        os: ["ubuntu-20.04", "macos-latest"]
         platform: [x86_64, i686]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        macos-target: ["10.10"]
         include:
           # Numpy versions depend on python version
-          - python-version: 3.6
-            numpy-version: 1.14.6
           - python-version: 3.7
             numpy-version: 1.16.5
           - python-version: 3.8
             numpy-version: 1.17.3
           - python-version: 3.9
             numpy-version: 1.19.1
+          - python-version: 3.10
+            numpy-version: 1.19.1
 
           # Use OS names as understood by multibuild
-          - os: "ubuntu-16.04"
+          - os: "ubuntu-20.04"
             os-name: "xenial"
           - os: "macos-latest"
             os-name: "osx"
-
+          - os: "macos-11.0"
+            os-name: "osx"
+            platform: "arm64"
+            python: "3.9"
+            numpy-version: "1.19.1"
+            macos-target: "11.0"
         exclude:
           # macosx does not run on i686
           - os: "macos-latest"
