--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   build:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    name: Build wheels on ${{ matrix.os }}
+    name: "${{ matrix.os }} / ${{ matrix.python-version }} / ${{ matrix.platform }}"
     runs-on: ${{ matrix.os }}
     strategy:
       # Ensure that a wheel builder finishes even if another fails
@@ -36,16 +36,6 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         macos-target: ["10.10"]
         include:
-          # Numpy versions depend on python version
-          - python-version: 3.7
-            numpy-version: 1.16.5
-          - python-version: 3.8
-            numpy-version: 1.17.3
-          - python-version: 3.9
-            numpy-version: 1.19.1
-          - python-version: 3.10
-            numpy-version: 1.19.1
-
           # Use OS names as understood by multibuild
           - os: "ubuntu-20.04"
             os-name: "xenial"
@@ -55,7 +45,6 @@ jobs:
             os-name: "osx"
             platform: "arm64"
             python: "3.9"
-            numpy-version: "1.19.1"
             macos-target: "11.0"
         exclude:
           # macosx does not run on i686
@@ -65,8 +54,8 @@ jobs:
       PLAT: ${{ matrix.platform }}
       TRAVIS_OS_NAME: ${{ matrix.os-name }}
       MB_PYTHON_VERSION: ${{ matrix.python-version }}
-      NP_BUILD_DEP: numpy==${{ matrix.numpy-version }}
-      NP_TEST_DEP: numpy==${{ matrix.numpy-version }}
+      NP_BUILD_DEP: oldest-supported-numpy
+      NP_TEST_DEP: oldest-supported-numpy
 
     steps:
       - uses: actions/checkout@v2
