--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -31,7 +31,7 @@ jobs:
       # Ensure that a wheel builder finishes even if another fails
       fail-fast: false
       matrix:
-        os: ["ubuntu-20.04", "macos-latest"]
+        os: ["macos-latest"]
         platform: [x86_64, i686]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         macos-target: ["10.10"]
@@ -41,11 +41,6 @@ jobs:
             os-name: "xenial"
           - os: "macos-latest"
             os-name: "osx"
-          - os: "macos-11.0"
-            os-name: "osx"
-            platform: "arm64"
-            python: "3.9"
-            macos-target: "11.0"
         exclude:
           # macosx does not run on i686
           - os: "macos-latest"
