--- a/.github/workflows/wheels-macos.yml
+++ b/.github/workflows/wheels-macos.yml
@@ -28,11 +28,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: ["x86_64", "arm64"]
+        platform: ["x86_64"]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - python-version: "3.7"
-            platform: "arm64"
 
     env:
       PLAT: ${{ matrix.platform }}
@@ -40,7 +37,7 @@ jobs:
       MB_PYTHON_VERSION: ${{ matrix.python-version }}
       NP_BUILD_DEP: oldest-supported-numpy
       NP_TEST_DEP: oldest-supported-numpy
-      BUILD_COMMIT: ${{ inputs.build-commit }}
+      BUILD_COMMIT: "${{ inputs.build-commit }}"
 
     steps:
       - uses: actions/checkout@v3
@@ -53,8 +50,6 @@ jobs:
       - name: Build Wheel
         shell: bash -l {0}
         run: |
-          # ref: https://github.com/buildout/buildout.wheel/issues/18#issuecomment-748858329
-          pip install "wheel==0.34.1"
           pip install --upgrade pip
           source .github/workflows/build.sh
       - name: List files
