--- a/.github/workflows/wheels-macos.yml
+++ b/.github/workflows/wheels-macos.yml
@@ -26,7 +26,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: ["x86_64"]
+        # platform: ["x86_64"]
+        platform: ["arm64"]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     env:
