--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -24,26 +24,26 @@ jobs:
   #     wheelhouse-path: "wheelhouse/*"
   #     build-commit: "v0.1.4"
   #
-  # macos:
-  #   if: "!contains(github.event.head_commit.message, '[skip ci]') && always()"
-  #   uses: ./.github/workflows/wheels-macos.yml
-  #   with:
-  #     artifacts-name: "wheels"
-  #     wheelhouse-path: "wheelhouse/*"
-  #     build-commit: "v0.1.4"
-
-  macosx_arm64:
+  macosx:
     if: "!contains(github.event.head_commit.message, '[skip ci]') && always()"
-    uses: ./.github/workflows/wheels-macos_arm64.yml
+    uses: ./.github/workflows/wheels-macos.yml
     with:
       artifacts-name: "wheels"
       wheelhouse-path: "wheelhouse/*"
       build-commit: "v0.1.4"
 
+  # macosx_arm64:
+  #   if: "!contains(github.event.head_commit.message, '[skip ci]') && always()"
+  #   uses: ./.github/workflows/wheels-macos_arm64.yml
+  #   with:
+  #     artifacts-name: "wheels"
+  #     wheelhouse-path: "wheelhouse/*"
+  #     build-commit: "v0.1.4"
+
   collect-wheels:
     name: Collect Wheels
-    # needs: [linux, macos, macos-arm64]
-    needs: [macosx_arm64]
+    # needs: [linux, macos, macos_arm64]
+    needs: [macosx]
     runs-on: ubuntu-latest
     steps:
       - name: Download all wheels
