--- a/.github/workflows/wheels-linux.yml
+++ b/.github/workflows/wheels-linux.yml
@@ -44,15 +44,18 @@ jobs:
 
       - uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
+
       - name: Build Wheel
         shell: bash -l {0}
         run: |
           pip install --upgrade pip
           source .github/workflows/build.sh
+
       - name: List files
         shell: bash -l {0}
         run : ls -la wheelhouse
+
       - name: Upload Wheel
         uses: actions/upload-artifact@v3
         with:
