--- a/.github/workflows/wheels-macos.yml
+++ b/.github/workflows/wheels-macos.yml
@@ -1,4 +1,4 @@
-# Ref: https://github.com/python-pillow/pillow-wheels/blob/main/.github/workflows/wheels.yml
+# Ref: https://github.com/python-pillow/pillow-wheels/blob/main/.github/workflows/wheels-macos.yml
 name: Build macOS  wheels
 
 env:
@@ -28,7 +28,7 @@ jobs:
       matrix:
         # platform: ["x86_64"]
         platform: ["arm64"]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.9", "3.10"]
 
     env:
       PLAT: ${{ matrix.platform }}
@@ -45,15 +45,18 @@ jobs:
 
       - uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
+
       - name: Build Wheel
         shell: bash -l {0}
         run: |
           pip install --upgrade pip
           source .github/workflows/build.sh
+
       - name: List files
         shell: bash -l {0}
         run : ls -la wheelhouse
+
       - name: Upload Wheel
         uses: actions/upload-artifact@v3
         with:
