--- a/.github/workflows/wheels-macos.yml
+++ b/.github/workflows/wheels-macos.yml
@@ -4,15 +4,13 @@ name: Build macOS  wheels
 env:
   REPO_DIR: scikit-misc
   CYTHON_BUILD_DEP: "Cython==0.29.24"
+  PYBIND11_BUILD_DEP: "pybind11>=2.4.3"
   BUILD_DIR: ${{ github.workspace }}
   OTHER_TEST_DEPS: "pytest"
 
 on:
   workflow_call:
     inputs:
-      build-commit:
-        required: true
-        type: string
       artifacts-name:
         required: true
         type: string
@@ -26,17 +24,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # platform: ["x86_64"]
-        platform: ["arm64"]
-        python-version: ["3.9", "3.10"]
+        platform: ["x86_64", "arm64"]
+        python: ["3.9", "3.10"]
 
     env:
       PLAT: ${{ matrix.platform }}
       TRAVIS_OS_NAME: "osx"
-      MB_PYTHON_VERSION: ${{ matrix.python-version }}
+      MB_PYTHON_VERSION: ${{ matrix.python }}
       NP_BUILD_DEP: oldest-supported-numpy
       NP_TEST_DEP: oldest-supported-numpy
-      BUILD_COMMIT: "${{ inputs.build-commit }}"
 
     steps:
       - uses: actions/checkout@v3
@@ -45,7 +41,7 @@ jobs:
 
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python }}
 
       - name: Build Wheel
         shell: bash -l {0}
