--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,6 +1,10 @@
 # Ref: https://github.com/python-pillow/pillow-wheels/blob/main/.github/workflows/wheels.yml
 name: Wheels
 
+# Notes:
+# 1. For multibuild, set the commit to build in
+#    $repo_toplevel/env_var.sh
+
 on:
   workflow_dispatch:
   push:
@@ -10,40 +14,28 @@ on:
       - gh-actions
 
 env:
-  # BUILD_COMMIT: v0.1.4
   COMMIT_TOOLS_DIR: "${{ github.workspace }}/../commit_tools"
   WHEELS_BRANCH: "wheelhouse"
   WHEELHOUSE_DIR: "${{ github.workspace }}/../wheelhouse"
 
 jobs:
-  # linux:
-  #   if: "!contains(github.event.head_commit.message, '[skip ci]') && always()"
-  #   uses: ./.github/workflows/wheels-linux.yml
-  #   with:
-  #     artifacts-name: "wheels"
-  #     wheelhouse-path: "wheelhouse/*"
-  #     build-commit: "v0.1.4"
-  #
+  linux:
+    if: "!contains(github.event.head_commit.message, '[skip ci]') && always()"
+    uses: ./.github/workflows/wheels-linux.yml
+    with:
+      artifacts-name: "wheels"
+      wheelhouse-path: "wheelhouse/*"
+
   macosx:
     if: "!contains(github.event.head_commit.message, '[skip ci]') && always()"
     uses: ./.github/workflows/wheels-macos.yml
     with:
       artifacts-name: "wheels"
       wheelhouse-path: "wheelhouse/*"
-      build-commit: "v0.1.4"
-
-  # macosx_arm64:
-  #   if: "!contains(github.event.head_commit.message, '[skip ci]') && always()"
-  #   uses: ./.github/workflows/wheels-macos_arm64.yml
-  #   with:
-  #     artifacts-name: "wheels"
-  #     wheelhouse-path: "wheelhouse/*"
-  #     build-commit: "v0.1.4"
 
   collect-wheels:
     name: Collect Wheels
-    # needs: [linux, macos, macos_arm64]
-    needs: [macosx]
+    needs: [linux, macosx]
     runs-on: ubuntu-latest
     steps:
       - name: Download all wheels
