--- a/.github/workflows/wheels-windows.yml
+++ b/.github/workflows/wheels-windows.yml
@@ -35,13 +35,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'has2k1/scikit-misc'
-          ref: 'v0.1.4'
+          ref: 'v0.1.5alpha1'
           submodules: true
 
       # Used to push the built wheels
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.10
+          python-version: "3.10"
 
       - name: Enable Developer Command Prompt
         uses: ilammy/msvc-dev-cmd@v1
